# personal-site

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  READMEN.md  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/.cargo/: config.toml
backend/migrations/2022-06-03-205026_create_content/: down.sql  up.sql
backend/migrations/2022-06-05-151602_create_project/: down.sql  up.sql
backend/migrations/2022-06-05-151607_create_blog/: down.sql  up.sql
backend/migrations/2022-07-04-031607_create_stats/: up.sql
backend/migrations/2022-11-03-144723_enforce_content_relationship/: down.sql  up.sql
backend/migrations/2022-11-05-161540_constrain_project_status/: down.sql  up.sql
backend/src/: configs.rs  cors_config.rs  main.rs  models.rs  route_config.rs  schema.patch  schema.rs  test_helpers.rs
backend/src/db/: mod.rs  models.rs
backend/src/db/models/: content.rs  extra_content.rs  mod.rs
backend/src/db/models/content/: base.rs  extra.rs  mod.rs  ops.rs
backend/src/db/ops/: content_ops.rs  mod.rs
backend/src/handlers/: content.rs  errors.rs  extractors.rs  mod.rs  route_data.rs
backend/src/handlers/content/: mod.rs
client/: .dockerignore  .env.development  .env.production  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.MD  index.html  package.json  tsconfig.json  vite.config.ts
config/: README.md  client.toml  config.json  config_template.json  deploy.env  deploy.fish.env  nginx.conf  server.toml
deployment/: README.md  deploy.fish
(+200 files in other folders)
