[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
dotenv = "0.15"
log = "^0.4"
env_logger = "^0.9"
derive_more = "^0.99"
r2d2 = "0.8.9"
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1", features=["derive"] }
diesel = { version = "^1.4", features = ["r2d2", "postgres", "chrono"]}