[package]
name = "backend"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-cors = "0.6.3"
dotenv = "0.15"
log = "^0.4"
env_logger = "^0.9"
derive_more = "^0.99"
r2d2 = "0.8.9"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
diesel = { version = "2.0.2", features = ["r2d2", "postgres", "chrono"] }
diesel_migrations = "2.0.0" 

[dev-dependencies]
lipsum = "0.8.2"
rand = "0.8.5"
serde_json = "1.0.85"
actix-http = "3.2.2"
